--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/<package-name>
+script-dir=$base/lib/<swarm_sense_dashboard>
 [install]
-install-scripts=$base/lib/<package-name>
+install-scripts=$base/lib/<swarm_sense_dashboard>
